<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <android.support.v4.widget.SwipeRefreshLayout
        android:id="@+id/swipeLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/llMe"
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:background="@drawable/base_gradient"
                android:gravity="center_vertical"
                android:padding="20dp">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">


                    <RelativeLayout
                        android:layout_width="70dp"
                        android:layout_height="70dp"
                        android:layout_marginBottom="10dp">

                        <com.miracle.base.view.CircleImageView
                            android:id="@+id/ivHeadImg"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_centerInParent="true"
                            android:src="@mipmap/default_head" />
                    </RelativeLayout>

                    <TextView
                        android:id="@+id/tvName"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:ellipsize="end"
                        android:maxLines="1"
                        android:textColor="@color/main_text_color" />
                </LinearLayout>


                <com.miracle.base.view.IconFontTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/icon_right_arrow"
                    android:textColor="@color/main_text_color"
                    android:textSize="20sp" />
            </LinearLayout>


            <com.miracle.base.view.ItemBar
                android:id="@+id/ibBailManage"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="1dp"
                app:ItemBar_Left_Icon="@string/icon_my_collections"
                app:ItemBar_Text="我的收藏" />


            <com.miracle.base.view.ItemBar
                android:id="@+id/ibCustomerService"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                app:ItemBar_Left_Icon="@string/icon_customer_service"
                app:ItemBar_Text="客服" />

            <com.miracle.base.view.ItemBar
                android:id="@+id/ibShare"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="1dp"
                app:ItemBar_Left_Icon="@string/icon_share"
                app:ItemBar_Left_TextSize="12sp"
                app:ItemBar_Text="分享" />


            <com.miracle.base.view.ItemBar
                android:id="@+id/ibAboutUs"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                app:ItemBar_Left_Icon="@string/icon_about_us"
                app:ItemBar_Text="@string/text_about_us" />

        </LinearLayout>

    </android.support.v4.widget.SwipeRefreshLayout>
</layout>