<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/main_color"
        android:padding="@dimen/dp_10">


        <EditText
            android:id="@+id/etContent"
            android:layout_width="250dp"
            android:layout_height="match_parent"
            android:layout_marginRight="@dimen/dp_10"
            android:paddingLeft="@dimen/dp_4"
            android:textSize="14sp"
            android:background="@drawable/shape_et_border2"
            android:hint="快来写点什么吧" />

        <com.miracle.base.view.IconFontTextView
            android:id="@+id/tvComment"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/icon_tab_auction"
            android:textColor="@color/white"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/tvCommentCount"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginRight="@dimen/dp_10"
            android:text="0"
            android:textColor="@color/white"
            android:textSize="12sp" />

        <com.miracle.base.view.IconFontTextView
            android:id="@+id/tvLike"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/icon_like"
            android:textColor="@color/white"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/tvLikeCount"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="0"
            android:textColor="@color/white"
            android:textSize="12sp" />

        <com.miracle.base.view.IconFontTextView
            android:id="@+id/tvSend"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/icon_send"
            android:textColor="@color/white"
            android:textSize="20sp" />
    </LinearLayout>

</layout>